# particle-physics-sim

./: .gitignore  CMakeLists.txt  CollisionDetector.cpp  CollisionDetector.h  CollisionResolver.cpp  CollisionResolver.h  Engine.cpp  Engine.h  LICENSE  Particle.cpp  Particle.h  README.md  Visualizer.cpp  Visualizer.h
example-input/: input_template.txt  test_1.txt
particle-phys-simulator/: CMakeLists.txt  CollisionDetector.cpp  Particle.cpp  Particle.h  main.cpp
particle-phys-simulator/example_input/: input_template.txt
particle-physics-sim/: CollisionDetector.h  CollisionResolver.cpp  CollisionResolver.h  Engine.cpp  Engine.h  Visualizer.cpp  Visualizer.h
particle-physics-sim/example-input/: test_1.txt
